infrastructure/cloudflare-gateway/config/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-httproutes-from-all
  namespace: cloudflare-gateway
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: dex
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: monitoring
  to:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: yh-cluster
